--- a/2017/note_ctpps_2016_alignment/ctpps_2016_alignment.tex
+++ b/2017/note_ctpps_2016_alignment/ctpps_2016_alignment.tex
@@ -429,14 +429,11 @@ Summary of the horizontal alignment results. Each plots corresponds to a RP. The
 \subsection{RP 45-210-nr-hr}
 \label{s:phys-left-near}
 
-\> Figure~\ref{fig:left_near_summary} correlation of movement indications.
+As anticipated above, there are indications that the sensor in the RP 45-210-nr-hr moved wrt.~the beam during the data-taking period. Figure~\ref{fig:left_near_summary} provides a correlation of these indications. The top plot is a zoom from Figure~\ref{fig:hor_match_results} and shows horizontal shift as a function of the LHC fill (ordered by increasing time). This plot indicates a shift by almost $2\un{mm}$ between the beginning and end of the data-taking period. Moreover, by comparing the data in the far and near RP in the left arm, it can be shown that the near RP was too far from the beam in the beginning and, by time, drifted to the expected position. The second plots from top is extracted from Figure~\ref{fig:vert_align_results} and describes the vertical shift -- it total about $1\un{mm}$. The third plot from top shows the time dependence of the slopes shown in Figure~\ref{fig:vert_align_method}. The time variation is not very significant but appreciably stronger than for other RPs.
 
-\>> The top plot is a zoom from Figure~\ref{fig:hor_match_results}, the second from top is extracted from Figure~\ref{fig:vert_align_results}. The third plot from top shows the time dependence of the slopes shown in Figure~\ref{fig:vert_align_method}. \TODO{change more important than for other RPs}
+The bottom plot of Figure~\ref{fig:left_near_summary} shows mean track angles as fitted through the 10 planes of Si strip sensors. These mean angles are sensitive to RP tilts in the $x$-$z$ (green) and $y$-$z$ (magenta) planes. While for other RPs the data are compatible with no fill-to-fill variation, RP 45-210-nr-hr shows a strong fill dependence of the tilt in $x$-$z$ plane.
 
-\>> describe the method for the bottom plot
-
-\> striking correlation in all movements
-
+Overall, Figure~\ref{fig:left_near_summary} shows a strong time correlation of the four movements, starting at about fill 4988 and stopping at about fill 5264.
 
 \begin{figure}[h!]
 \begin{center}
@@ -448,9 +445,9 @@ Summary of the evidence for the movement of the RP 45-210-nr-hr. The horizontal 
 \end{center}
 \end{figure}
 
-\> interpretation
-\>> hypothesis 1: enough room, spring not strong at the last 2mm, optical inspection indicates friction
-\>> hypothesis 2
+Since no instability has been reported by the BPMs, see Figure~\ref{fig:cond_bpm}, and since no unexpected behaviour has been observed in the far RP less than $9\un{m}$ from the near RP, it is more likely that the Si sensors moved.
+
+Since the horizontal shift trend from Figure~\ref{fig:left_near_summary} is not reported in the RP position measurements, cf.~Figure~\ref{fig:cond_rp}, there can be only two hypotheses. First, the moving element was inside the RP (thus not affecting the RP position measurements), or second, the entire RP structure moved (both ends of the RP position gauges moved together). For the first hypothesis, it has been verified that inside the RP there is enough room for the detector package (DP) to be by $\sim 2\un{mm}$ too far out. There is a spring that should push the DP to the design position, however its force at the last $2\un{mm}$ is strongly reduced. Furthermore, visual inspection of the DP replaced in TS2 indicates some points of friction (polished surfaces). Regarding the second hypothesis, it could be that the 4 screws holding the RP structure were not taught enough.
 
 
 %----------------------------------------------------------------------------------------------------
